--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-This R package, nbadownloader, is a utility package that helps you download nba data easily. 
+This R package, nbadownloader, is a utility package that helps you download nba data from stat.nba.com easily. 
 
 ## Installation
 
@@ -28,7 +28,7 @@ You can install the released version of nbadownloader from [CRAN](https://CRAN.R
 install.packages("nbadownloader")
 ```
 
-And the development version from [GitHub](https://github.com/) with:
+There's no version of nbadownloader on CRAN. You can install the development version from GitHub with:
 
 ``` r
 # install.packages("devtools")
@@ -36,25 +36,31 @@ devtools::install_github("GymRat102/nbadownloader")
 ```
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+This is a basic example which shows you how to fetch Luka Doncic's shot data in 2019-20 season and return a dataframe in your R environment:
 
-```{r example}
+``` r
 library(nbadownloader)
-## basic example code
+
+## 1629029 is Luka's playerId, which you need to look up on stat.nba.com by your own at this stage.
+Luka_shotdata_201920 <- get_shotdata("2019-20", "1629029") 
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+The returned dataframe is like this:
 
-```{r cars}
-summary(cars)
+```{r}
+library(dplyr)
+glimpse(Luka_shotdata_201920)
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/master/examples>.
+The dataframe includes tons of information about every shot, especially x, y coordinates. For example, you can draw a super simple shot chart with the help of ggplot2:
 
-You can also embed plots, for example:
+```{r}
+Luka_shotdata_201920$LOC_X <- as.numeric(as.character(Luka_shotdata_201920$LOC_X))
+Luka_shotdata_201920$LOC_Y <- as.numeric(as.character(Luka_shotdata_201920$LOC_Y))
 
-```{r pressure, echo = FALSE}
-plot(pressure)
+Luka_shotdata_201920 %>% 
+  ggplot(aes(x = LOC_X, y = LOC_Y)) + 
+  geom_point() +
+  coord_equal()
 ```
 
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
